Issue 21516: fix settings_users Unstable bots and users table
New class activated_user added to set extra padding when
deactivated icon isn't visible.
Also added breaking line when deactivating an user.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2665,6 +2665,10 @@ div.topic_edit_spinner .loading_indicator_spinner {
     margin-right: 25px;
 }
 
+.activated_user > td:first-child {
+    padding-right: 21px;
+}
+
 .deactivated_user .deactivated-user-icon {
     color: inherit;
     margin-left: 2px;
